--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>Публикации в категории: {{ category.name|default:slug }}</title>
+    <title>Публикации в категории: {{ category.name|default:category.slug }}</title>
   </head>
   <body>
     <header>
@@ -44,7 +44,7 @@ html
 
 <main>
   <div class="container py-5">
-    <h1>Публикации в категории: {{ category.name|default:slug }}</h1>
+    <h1>Публикации в категории: {{ category.name|default:category.slug }}</h1>
 
     {% if posts %}
       <div class="list-group">
